--- a/source/css/style.css
+++ b/source/css/style.css
@@ -9,6 +9,7 @@
        url('https://fkohrt.gitlab.io/blog-dist/fonts/LatoLatin-Regular.woff') format('woff'), /* Modern Browsers */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/LatoLatin-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/LatoLatin-Regular.svg#Lato') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 @font-face {
   font-family: 'Lato';
@@ -21,6 +22,7 @@
        url('https://fkohrt.gitlab.io/blog-dist/fonts/LatoLatin-Bold.woff') format('woff'), /* Modern Browsers */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/LatoLatin-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/LatoLatin-Bold.svg#Lato') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 @font-face {
   font-family: 'Lato';
@@ -33,6 +35,7 @@
        url('https://fkohrt.gitlab.io/blog-dist/fonts/LatoLatin-Italic.woff') format('woff'), /* Modern Browsers */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/LatoLatin-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/LatoLatin-Italic.svg#Lato') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 @font-face {
   font-family: 'Lora';
@@ -45,6 +48,7 @@
        url('https://fkohrt.gitlab.io/blog-dist/fonts/Lora-Regular.woff') format('woff'), /* Modern Browsers */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/Lora-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/Lora-Regular.svg#Lora') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 @font-face {
   font-family: 'Lora';
@@ -57,6 +61,7 @@
        url('https://fkohrt.gitlab.io/blog-dist/fonts/Lora-Bold.woff') format('woff'), /* Modern Browsers */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/Lora-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/Lora-Bold.svg#Lora') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 @font-face {
   font-family: 'Lora';
@@ -69,6 +74,7 @@
        url('https://fkohrt.gitlab.io/blog-dist/fonts/Lora-Italic.woff') format('woff'), /* Modern Browsers */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/Lora-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/Lora-Italic.svg#Lora') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 @font-face {
   font-family: 'Playfair Display SC';
@@ -81,6 +87,7 @@
        url('https://fkohrt.gitlab.io/blog-dist/fonts/PlayfairDisplaySC-Regular.woff') format('woff'), /* Modern Browsers */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/PlayfairDisplaySC-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/PlayfairDisplaySC-Regular.svg#PlayfairDisplaySC') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 @font-face {
   font-family: 'Playfair Display SC';
@@ -93,6 +100,7 @@
        url('https://fkohrt.gitlab.io/blog-dist/fonts/PlayfairDisplaySC-Black.woff') format('woff'), /* Modern Browsers */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/PlayfairDisplaySC-Black.ttf') format('truetype'), /* Safari, Android, iOS */
        url('https://fkohrt.gitlab.io/blog-dist/fonts/PlayfairDisplaySC-Black.svg#PlayfairDisplaySC') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
  
 /* general */
